--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -22,6 +22,7 @@ env:
 jobs:
   test:
     runs-on: ubuntu-latest
+    if: false
     strategy:
       matrix:
         testType: [core, swoole, components]
