--- a/src/Components/amqp/composer.json
+++ b/src/Components/amqp/composer.json
@@ -23,6 +23,7 @@
         "files": [
             "../../../vendor/autoload.php",
             "../../../dev/try-include-swoole.php",
+            "../redis/vendor/autoload.php",
             "../workerman/vendor/autoload.php",
             "../queue/vendor/autoload.php"
         ]
