--- a/src/Components/snowflake/composer.json
+++ b/src/Components/snowflake/composer.json
@@ -18,7 +18,8 @@
         },
         "files": [
             "../../../vendor/autoload.php",
-            "../database/vendor/autoload.php"
+            "../database/vendor/autoload.php",
+            "../redis/vendor/autoload.php"
         ]
     },
     "scripts": {},
