--- a/src/Components/swoole/composer.json
+++ b/src/Components/swoole/composer.json
@@ -25,6 +25,7 @@
         },
         "files": [
             "../../../vendor/autoload.php",
+            "../redis/vendor/autoload.php",
             "../amqp/vendor/autoload.php"
         ]
     },
