--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -328,8 +328,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: ["8.1", "8.2"]
-        swoole: [v5.1.0, v5.0.3]
+#        php: ["8.1", "8.2"]
+#        swoole: [v5.1.0, v5.0.3]
+        php: ["8.2"]
+        swoole: [v5.1.0]
         roadrunner: [2.7.*]
     env:
       MYSQL_SERVER_PASSWORD: "root"
