--- a/composer.json
+++ b/composer.json
@@ -53,14 +53,16 @@
         "files": [
             "dev/bootstrap.php",
             "tests/helper.php",
-            "src/Components/model/vendor/autoload.php"
+            "src/Components/model/vendor/autoload.php",
+            "src/Components/redis/vendor/autoload.php"
         ]
     },
     "suggest": {
         "ext-inotify": "高性能热更新支持",
         "ext-pdo": "数据库操作支持",
         "symfony/polyfill-uuid": "模型 uuid 发号器依赖",
-        "ext-uuid": "模型 uuid 发号器依赖"
+        "ext-uuid": "模型 uuid 发号器依赖",
+        "ext-redis": "phpredis 客户端依赖"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
@@ -120,6 +122,7 @@
         ],
         "test-database": "@php vendor/bin/phpunit -c src/Components/database/tests/phpunit.xml",
         "test-model": "@php vendor/bin/phpunit -c src/Components/model/tests/phpunit.xml",
+        "test-redis": "@php vendor/bin/phpunit -c src/Components/redis/tests/phpunit.xml",
         "test-components": [
             "@composer test-swoole",
             "@composer test-workerman",
